Source/WebCore: Web Inspector: Viewport console warnings cleanup. https://bugs.webkit.org/show_bug.cgi?id=102890

Patch by Markus Heintz <markusheintz@chromium.org> on 2012-12-04
Reviewed by Jochen Eisinger.

Improve the console message text for a viewport console warning and
change the log level to warning.

No new tests added, as this change is covered by updates to existing
test expectations.

* dom/ViewportArguments.cpp:
(WebCore::viewportErrorMessageTemplate):
    Improve the console message text for invalid values.
(WebCore::viewportErrorMessageLevel):
    Upgraded the TruncatedViewportArgumentValueError and the
    TargetDensityDpiUnsupported messages's MessageLeval to warning.
(WebCore::reportViewportWarning):
    Adding only a comment for a FIXIT reminder.

LayoutTests: Web Inspector: Updating test expectations after viewport console warnings cleanup.
https://bugs.webkit.org/show_bug.cgi?id=102890

Patch by Markus Heintz <markusheintz@chromium.org> on 2012-12-04
Reviewed by Jochen Eisinger.

Updating test expectations after improving the console message text
for a viewport console warning and change the log level to warning.

* fast/viewport/viewport-121-expected.txt:
* fast/viewport/viewport-122-expected.txt:
* fast/viewport/viewport-125-expected.txt:
* fast/viewport/viewport-126-expected.txt:
* fast/viewport/viewport-127-expected.txt:
* fast/viewport/viewport-134-expected.txt:
* fast/viewport/viewport-52-expected.txt:
* fast/viewport/viewport-53-expected.txt:
* fast/viewport/viewport-54-expected.txt:
* fast/viewport/viewport-55-expected.txt:
* fast/viewport/viewport-77-expected.txt:
* fast/viewport/viewport-83-expected.txt:
* fast/viewport/viewport-84-expected.txt:
* fast/viewport/viewport-87-expected.txt:
* fast/viewport/viewport-warnings-3-expected.txt:
* fast/viewport/viewport-warnings-5-expected.txt:
* fast/viewport/viewport-warnings-6-expected.txt:

Canonical link: https://commits.webkit.org/122090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136502 268f45cc-cd09-0410-ab3c-d52691b4dbfc